<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/a1">
        <item
            android:id="@+id/nav_dimension"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_mass"
            android:title="@string/menu_gallery"
            />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/a2">

        <!--        <item-->
        <!--            android:id="@+id/nav_settings"-->
        <!--            android:title="@string/menu_settings" />-->

        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_slideshow"
            />
    </group>




</menu>