<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dimension">

    <fragment
        android:id="@+id/nav_dimension"
        android:name="com.craftcodetechnology.foundryallowances.ui.dimension.DimensionFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_dimension" />

    <fragment
        android:id="@+id/nav_mass"
        android:name="com.craftcodetechnology.foundryallowances.ui.mass.MassFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_mass" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.craftcodetechnology.foundryallowances.ui.about.AboutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.craftcodetechnology.foundryallowances.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_korobleniya"
        android:name="com.craftcodetechnology.foundryallowances.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />







</navigation>